--- a/qrcode.html
+++ b/qrcode.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ID Card and Badge Generator</title>
+    <title>Digital ID </title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -132,7 +132,7 @@
             <label for="company">Phone Number</label>
             <input type="text" id="company" required>
 
-            <label for="access">Code of caffe</label>
+            <label for="access">Job type</label>
             <select  id="access" required>
                 <option value="Worker">Worker</option>
                 <option value="Student">Student</option>
