--- a/qrcode.html
+++ b/qrcode.html
@@ -117,7 +117,8 @@
 <body>
     
     <div id="formContainer" class="container" >
-        <h1>Badge Generator</h1>
+        
+        <h1>Digital ID</h1>
         <form id="badgeForm">
 
             <label for="eventname">Your Name</label>
