--- a/qrcode.html
+++ b/qrcode.html
@@ -117,7 +117,7 @@
 <body>
     
     <div id="formContainer" class="container" >
-        
+         <img src="BRU.png" alt="borana">
         <h1>Digital ID</h1>
         <form id="badgeForm">
 
