--- a/qrcode.html
+++ b/qrcode.html
@@ -37,7 +37,11 @@
         color: #3c3c3c;  
         margin-bottom: 20px;  
     }  
+    img {  
+        text-align: center; 
+         align-items: center;
     
+    } 
     label {  
         display: block;  
         margin-top: 10px;  
