--- a/qrcode.html
+++ b/qrcode.html
@@ -37,11 +37,13 @@
         color: #3c3c3c;  
         margin-bottom: 20px;  
     }  
-    img {  
-        text-align: center; 
-         align-items: center;
-    
-    } 
+    img{
+        width: 100px;
+        height: 100px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
     label {  
         display: block;  
         margin-top: 10px;  
