--- a/qrcode.html
+++ b/qrcode.html
@@ -150,7 +150,7 @@
                 <option value="Student">Student👨‍🎓</option>
             </select>
 
-            <button type="submit">Generate ID</button>
+            <button type="submit">Generate ID⬇️</button>
 
         </form>
     </div>
@@ -173,7 +173,7 @@
 
     </div>
 
-    <button id="dwnBadge" class="dwnBadge">Download ID</button>
+    <button id="dwnBadge" class="dwnBadge">Download⬇️</button>
     <button id="createAnother" class="createAnother">Create ID</button>
 
 
