--- a/qrcode.html
+++ b/qrcode.html
@@ -123,6 +123,11 @@
         .container, .badge {  
             width: 90%;  
         }  
+            .dwnBadge, .createAnother {  
+        display: none; /* Initially hidden */  
+        margin: 5px 0;  
+         width: 60%;
+    }  
     }
 </style>
 <body>
